feat:chapter04 线程安全问题、线程应用之互斥解决案列出现的线程安全问题、补充面试题

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>xgw-juc-java-01</module>
         <module>xgw-juc-java-02</module>
         <module>xgw-juc-java-03</module>
+        <module>xgw-juc-java-04</module>
     </modules>
 
     <name>xgw-juc-java</name>
