--- a/xgw-juc-java-04/pom.xml
+++ b/xgw-juc-java-04/pom.xml
@@ -52,6 +52,17 @@
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.32</version> <!-- 或者你想要的版本 -->
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.32</version> <!-- 或者你想要的版本 -->
+        </dependency>
     </dependencies>
 
 </project>
