feat:chapter04 volatile保证可见性、使用volatile优化两阶段终止模式、balking犹豫模式（普通java程序、web程序案例）、犹豫模式实现单例模式

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,17 @@
         <module>xgw-juc-java-02</module>
         <module>xgw-juc-java-03</module>
         <module>xgw-juc-java-04</module>
+        <module>xgw-juc-java-05</module>
+        <module>case_monitor</module>
     </modules>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
 
     <name>xgw-juc-java</name>
     <description>study java juc</description>
