feat:引出指令重排序的概念，以及它的优缺点。指令重排序引发的问题，使用volatile关键字禁用指令重排序

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>xgw-juc-java-04</module>
         <module>xgw-juc-java-05</module>
         <module>case_monitor</module>
+        <module>jcstress_ordering</module>
     </modules>
 
     <parent>
