--- a/xgw-juc-java-05/pom.xml
+++ b/xgw-juc-java-05/pom.xml
@@ -20,6 +20,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jcstress</groupId>
+            <artifactId>jcstress-core</artifactId>
+            <version>0.8</version>
+        </dependency>
     </dependencies>
 
 </project>
