feat:不可变类的线程安全理解、享元模式的引出

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>case_monitor</module>
         <module>jcstress_ordering</module>
         <module>xgw-juc-java-06</module>
+        <module>xgw-juc-java-07</module>
     </modules>
 
     <parent>
